# epit25

./: .gitignore  _CoqProject  cats.v  coq-epit.opam  dune-project  nodune_CoqProject  prog.md  readme  readme.md
theories/: cats.v  cats_bak.v  coinduction.v  dune  ex_etypes.v  ex_setoids.v  ex_types.v  greatestfixpoints.v  setoids.v  streams.v  tower.v  utils.v
